package com.oose.restaurant_mis.enums;

public enum OrderStatus { OPEN, PENDING_PAYMENT, PAID, CANCELLED }
