package com.oose.restaurant_mis.enums;

public enum ServedStatus {
    PENDING, COOKING, SERVED
}
