@startuml
skinparam classAttributeIconSize 0
left to right direction

' ================== DEFINE ==================
!define entity(name) class name << (E,#A9F5F2) >>
!define controller(name) class name << (C,#F9E79F) >>
!define service(name) class name << (S,#AED6F1) >>
!define repository(name) class name << (R,#D7BDE2) >>

' ================== ENUM ==================
enum OrderStatus <<enumeration>> {
  OPEN
  PENDING_PAYMENT
  PAID
  CANCELLED
}

enum ServedStatus <<enumeration>> {
  PENDING
  COOKING
  SERVED
}

' ================== ENTITY ==================
entity(Order) {
  - orderId: Integer
  - table: DiningTable
  - staff: User
  - discount: Discount
  - customerName: String
  - totalAmount: Double
  - finalAmount: Double
  - status: OrderStatus
  - createdAt: LocalDateTime
  - closedAt: LocalDateTime
  + getters/setters
}

entity(OrderDetail) {
  - orderDetailId: Integer
  - order: Order
  - menuItem: MenuItem
  - quantity: Integer
  - unitPrice: Double
  - note: String
  - servedStatus: ServedStatus
  - createdAt: LocalDateTime
  + getters/setters
}

' ================== CONTROLLER ==================
controller(CustomerOrderController) {
  + addToCart(itemId, quantity, HttpSession): String
  + updateCartNote(itemId, note, HttpSession): String
  + placeOrder(HttpSession): String
  + requestCheckout(HttpSession): String
}

controller(WaiterController) {
  + addItem(orderId, itemId, quantity): ResponseEntity
  + removeItem(detailId, quantity): ResponseEntity
  + payOrder(orderId, discountId, method): ResponseEntity
}

controller(OrderAdminController) {
  + getContent(...): String
  + addItem(orderId, itemId, quantity): ResponseEntity
  + removeItem(detailId, quantity, HttpSession): ResponseEntity
  + cancelOrder(orderId, HttpSession): ResponseEntity
}

controller(ChefController) {
  + updateStatus(detailId, status): String
}

' ================== SERVICE ==================
service(OrderService) {
  + save(order): void
  + updateDetailStatus(detailId, status): void
  + createOrderFromTable(tableId): void
  + addItemToOrder(orderId, itemId, quantity): void
  + removeItemFromOrder(detailId, quantity): void
  + payOrder(orderId, discountId, method): void
}

' ================== REPOSITORY ==================
repository(OrderRepository) {
  + searchOrders(...): Page
  + findTopByTable_TableIdAndStatusOrderByCreatedAtDesc(...): Order
}

repository(OrderDetailRepository) {
  + findByOrder_OrderId(orderId): List
  + findByServedStatusOrderByOrderDetailIdAsc(status): List
}

' ================== RELATION ==================
' Controller -> Service (Nét liền)
CustomerOrderController --> OrderService
WaiterController --> OrderService
OrderAdminController --> OrderService
ChefController --> OrderService

' Service -> Repository (Nét liền)
OrderService --> OrderRepository
OrderService --> OrderDetailRepository

' Repository -> Entity (Nét đứt)
OrderRepository ..> Order
OrderDetailRepository ..> OrderDetail

' Quan hệ nội bộ
Order "1" *-- "many" OrderDetail : chứa >
Order *-- OrderStatus
OrderDetail *-- ServedStatus

@enduml